        SS   tt   eeeeee  ll   ll   aaaaa  --  "An Atari 2600 VCS Emulator"
    SS  SS   tt   ee      ll   ll  aa  aa
     SSSS     ttt  eeeee llll llll  aaaaa

===========================================================================
                              Release History
===========================================================================

7.0 to 7.1 (xxx x, 202x)

  * Added developer option for disabling PlusROM support (TODO: Doc)

  * Enhanced PAL-60 detection, searches for signature (e.g. PAL60) in ROM

  * Enhanced VSYNC emulation, considers VBLANK now too

6.7.1 to 7.0 (October 5, 2024)

  * Enhanced ROM launcher to allow multiple images per ROM.

  * Made heaps of additional images available for the ROM launcher.

  * Added searching by filename for ROM launcher images.

  * Added option to start random ROM.

  * Added automatically enabled phosphor modes.

  * Enhanced Game Properties dialog for multigame ROMs.

  * Added 2nd UI theme and hotkey for toggling UI theme.

  * Added bezel support (incl. Sinden Lightgun).

  * Added optional type format detection based on colors used.

  * Added Joy2B+ controller support.

  * Added auto detection for QuadTari attached controllers.

  * Enhanced Kid Vid support to play tape audio.

  * Added port selection, used for controller default mapping.

  * Added missing PlusROM support for E7 bankswitching.

  * Enhanced movie cart (MVC) support.

  * Accelerated emulation up to ~15% (ARM).

  * Added limited GameLine Master Module bankswitching support.

  * Added 03E0 bankswitching for Brazilian Parker Bros ROMs.

  * Added WF8 bankswitching used by some certain Coleco white carts.

  * Added JANE bankswitching used by Coleco's Tarzan prototype.

  * Added ELF mapper for Mattress Monkeys.

  * Added BUS bankswitching support for some older demos.

  * Fixed broken 7800 pause key support.

  * Added developer option for random hotspot peek values.

  * Added user defined CPU cycle timers to debugger.
