@@ -25,6 +25,7 @@ src/os/macos/M6502.ins
 .vscode/c_cpp_properties.json
 .vscode/settings.json
 src/os/windows/sdl/*
+src/os/windows/sdl3/*
 src/os/windows/x64/*
 src/os/windows/Win32/*
 src/os/windows/Stella.vcxproj.user
